<resources>
    <string name="app_name">QuizApp</string>
    <string name="score">Score 0/5</string>
    <string name="question_number">1/5 Question</string>

    <string name="question_1">Under which of the following Android is licensed?</string>
    <string name="question1_A">OSS</string>
    <string name="question1_B">Sourceforge</string>
    <string name="question1_C">Apache/MIT</string>
    <string name="question1_D">None of the above</string>
    <string name="answer_1">Apache/MIT</string>


    <string name="question_2">For which of the following Android is mainly developed?</string>
    <string name="question_2A">Servers</string>
    <string name="question_2B">Desktops</string>
    <string name="question_2C">Laptops</string>
    <string name="question_2D">Mobile devices</string>
    <string name="answer_2">Mobile devices</string>


    <string name="question_3">Which of the following virtual machine is used by the Android operating system?</string>
    <string name="question_3A">JVM</string>
    <string name="question_3B">Dalvik virtual machine</string>
    <string name="question_3C">Simple virtual machine</string>
    <string name="question_3D">None of the above</string>
    <string name="answer_3">Dalvik virtual machine</string>

    <string name="question_4">APK stands for</string>
    <string name="question_4A">Android Phone Kit</string>
    <string name="question_4B">Android Page Kit</string>
    <string name="question_4C">Android Package Kit</string>
    <string name="question_4D">None of the above</string>
    <string name="answer_4">Android Package Kit</string>

    <string name="question_5">What is an activity in android?</string>
    <string name="question_5A">Android class</string>
    <string name="question_5B">android package</string>
    <string name="question_5C">A single screen in an application with supporting java code</string>
    <string name="question_5D">None of the above</string>
    <string name="answer_5">A single screen in an application with supporting java code</string>

    <string name="selctedoption">SelctedOption</string>
    <string name="correctanswer">CorrectAnswer</string>
</resources>